--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-Hello, my name is Emory!
-Me and my dad have made a website just
+<p style="font-family: Arial, sans-serif; font-size: 18px; color: #333; line-height: 1.6;">
+    Hello, my name is <strong>Emory</strong>! <br>
+    My dad and I have created this awesome website just for you!
+</p>
+
