--- a/index.html
+++ b/index.html
@@ -1,5 +1,73 @@
-<p style="font-family: Arial, sans-serif; font-size: 18px; color: #333; line-height: 1.6;">
-    Hello, my name is <strong>Emory</strong>! <br>
-    My dad and I have created this awesome website just for you!
-</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Homepage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        header {
+            background-color: #007bff;
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+        .content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        footer {
+            background-color: #007bff;
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Homepage</h1>
+        <p>Where great ideas meet.</p>
+    </header>
+
+    <div class="container">
+        <section class="content">
+            <h2>About Me</h2>
+            <p>Hello, I'm Emory. This is my homepage where I share my thoughts, ideas, and projects.</p>
+
+            <h2>Latest Projects</h2>
+            <ul>
+                <li><a href="#">Project 1</a></li>
+                <li><a href="#">Project 2</a></li>
+                <li><a href="#">Project 3</a></li>
+            </ul>
+
+            <h2>Contact Me</h2>
+            <p>You can reach me via email at <a href="mailto:you@example.com">you@example.com</a>.</p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 My Homepage. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
